<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunmediaeg.offers.fragment.LoginChoiceFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_logo" />


    <Button
        android:id="@+id/btnSignUpAsVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="155dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:background="@drawable/button_selector"
        android:text="@string/btnSignUpAsVendor"
        android:textColor="@color/colorPrimaryDarker"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnSignUpAsUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:layout_below="@+id/btnSignUpAsVendor"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_selector_user"
        android:text="@string/btnSignUpAsUser"
        android:textColor="@color/colorPrimaryDarker"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="82.5dp"
        android:layout_below="@+id/btnSignUpAsUser"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_selector_inverse"
        android:text="@string/btnLogin"
        android:textColor="@color/colorPrimaryDarker"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>
