<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunmediaeg.offers.fragment.SearchFragment">

    <include
        android:id="@+id/lAppBar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/lAppBar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:hint="@string/etSearch"
        android:inputType="textMultiLine"
        android:textColor="@color/colorBackground"
        android:textColorHint="@color/colorBackground" />

    <TextView
        android:id="@+id/tvCategoryClasses"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etSearch"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/tvCategoryClasses"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llOrganizerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCategoryClasses"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/newoffers" />

            <TextView
                android:id="@+id/tvNewOffers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/tvNewOffers"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:src="@drawable/offer_end" />

            <TextView
                android:id="@+id/tvOffersToEnd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/tvOffersToEnd"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSearchForOffers"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/llOrganizerContainer"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/tvSearchForOffers"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />


    <GridView
        android:id="@+id/gvCategories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvSearchForOffers"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        tools:listitem="@layout/companies_item_layout" />

</RelativeLayout>
