<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunmediaeg.offers.fragment.SignUpFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_logo" />

    <include
        android:id="@+id/lAppBar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lAppBar"
        android:layout_marginTop="120dp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/rlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="97dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_line"
            android:gravity="center_vertical|right"
            android:hint="@string/etUserName"
            android:inputType="textPersonName"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDarker" />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/etUserName"
            android:layout_marginLeft="78dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_line"
            android:gravity="center_vertical|right"
            android:hint="@string/etMail"
            android:inputType="textEmailAddress"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDarker" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/etMail"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_line"
            android:gravity="center_vertical|right"
            android:hint="@string/etPassword"
            android:inputType="textPassword"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDarker" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/rlEditText"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_selector"
        android:paddingLeft="10dp"
        android:text="@string/btnSend"
        android:textColor="@color/colorPrimaryDarker"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/llOrganizerContainer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorButton"
        android:gravity="center"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/ibFaceBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/shadow"
            android:elevation="5dp"
            android:src="@drawable/facebook" />

        <ImageButton
            android:id="@+id/ibTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shadow"
            android:elevation="5dp"
            android:src="@drawable/twitter" />

        <ImageButton
            android:id="@+id/ibGooglePlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/shadow"
            android:elevation="5dp"
            android:src="@drawable/g_p" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llOrganizerContainer1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_red_dark" />
</RelativeLayout>
